[package]
name = "gateway"
version = "0.4.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
common = { git = "https://github.com/malvinpratama/iam-rust-common", tag = "v0.4.0" }
proto = { git = "https://github.com/malvinpratama/iam-rust-proto", tag = "v0.4.0" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
