[package]
name = "gateway"
version = "0.6.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
common = { git = "https://github.com/malvinpratama/iam-rust-common", tag = "v0.5.0" }
proto = { git = "https://github.com/malvinpratama/iam-rust-proto", tag = "v0.7.0" }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde_urlencoded = "0.7"
tonic = "0.14"
tonic-tracing-opentelemetry = "0.38"
prost = "0.14"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
axum-tracing-opentelemetry = "0.38"
axum-prometheus = "0.10"
